# nvim-remote

./: README.md  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/nvim_remote/: __init__.py  __main__.py  nvr.py
tests/: test_nvr.py
